# emsp-as/go/routers.go
@@ -1,105 +1,0 @@
-/*
- * eMSP Authorization Server
- *
- * Authorization Server of an e-Mobility Service Provider written in Go.
- *
- * API version: 0.0.0
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package emsp_as
-
-import (
-	"fmt"
-	"net/http"
-	"strings"
-
-	"github.com/gorilla/mux"
-)
-
-type Route struct {
-	Name        string
-	Method      string
-	Pattern     string
-	HandlerFunc http.HandlerFunc
-}
-
-type Routes []Route
-
-func NewRouter() *mux.Router {
-	router := mux.NewRouter().StrictSlash(true)
-	for _, route := range routes {
-		var handler http.Handler
-		handler = route.HandlerFunc
-		handler = Logger(handler, route.Name)
-
-		router.
-			Methods(route.Method).
-			Path(route.Pattern).
-			Name(route.Name).
-			Handler(handler)
-	}
-
-	return router
-}
-
-func Index(w http.ResponseWriter, r *http.Request) {
-	fmt.Fprintf(w, "Hello World!")
-}
-
-var routes = Routes{
-	Route{
-		"Index",
-		"GET",
-		"/",
-		Index,
-	},
-
-	Route{
-		"PostLogin",
-		strings.ToUpper("Post"),
-		"/api/login",
-		PostLogin,
-	},
-
-	Route{
-		"GetAuthorizationFrontend",
-		strings.ToUpper("Get"),
-		"/api/authorization",
-		GetAuthorizationFrontend,
-	},
-
-	Route{
-		"PostAuthorizationBackend",
-		strings.ToUpper("Post"),
-		"/api/authorization",
-		PostAuthorizationBackend,
-	},
-
-	Route{
-		"PostPushedAuthorizationRequest",
-		strings.ToUpper("Post"),
-		"/api/par",
-		PostPushedAuthorizationRequest,
-	},
-
-	Route{
-		"PostTokenRequest",
-		strings.ToUpper("Post"),
-		"/api/token",
-		PostTokenRequest,
-	},
-
-	Route{
-		"GetDiscoveryDocument",
-		strings.ToUpper("Get"),
-		"/.well-known/openid-configuration",
-		GetDiscoveryDocument,
-	},
-
-	Route{
-		"GetJwks",
-		strings.ToUpper("Get"),
-		"/api/jwks",
-		GetJwks,
-	},
-}
